tests/error/modifier_errors/ctrl_arg_copy.err
Error: Copy violation (at $FILE:17:12)
   | 
15 |     q = qubit()
16 |     with control(q):
17 |         use(q)
   |             ^ Variable `q` with non-copyable type `qubit` cannot be
   |               borrowed ...
   | 
16 |     with control(q):
   |                  - since it was already borrowed here

Guppy compilation failed due to 1 previous error
